<resources>
    <string name="app_name">Ejercicio 1</string>
    <string name="hint_nombre">Nombre y apellidos</string>
    <string name="chk_edad">Soy mayor de edad</string>
    <string name="label_vino">Vino</string>
    <string name="label_cerveza">Cerveza</string>
    <string name="label_redbull">Red Bull</string>
    <string name="label_kas_limon">Kas limon</string>
    <string name="label_cocacola">Coca Cola</string>
    <string name="label_kas_naranja">Kas Naranja</string>
    <string name="btn_comprar">Comprar</string>
    <string name="hint_cantidad">0</string>

    <string name="hint_num_tarjeta">Numero tarjeta</string>
    <string name="hint_mes">mes</string>
    <string name="hint_anio">año</string>
    <string name="hint_cvv">cvv</string>
    <string name="btn_pagar">PAGAR</string>

</resources>